kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb
  namespace: todo-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb

        image: mongo:8

        ports:
        - containerPort: 27017
